# skill

./: .gitignore
.agents/skills/stock-analysis/: README.md  pyproject.toml  requirements.txt
.agents/skills/stock-analysis/references/: examples.md  markets.md
.agents/skills/stock-analysis/scripts/: stock_fetcher.py
stock-analysis/: AGENTS.md  README.md  SKILL.md  demo_global.py  example.py  pyproject.toml  requirements.txt  test_global_analysis.py  test_skill.py
stock-analysis/references/: components.md  data-sources.md  indicators.md
stock-analysis/scripts/: stock_analyzer.py  stock_fetcher.py  technical_analysis.py  visualization.py
