[project]
name = "stock-analysis"
version = "0.1.0"
description = "美股数据分析工具 - 专注于Yahoo Finance数据源"
authors = [
    {name = "Stock Analysis Team", email = "team@example.com"},
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
stock-analyzer = "scripts.us_stock_analyzer:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]